# sd-ocr-activity

./: Makefile  README.md  pyproject.toml  requirements.txt  sd-ocr-activity.spec
sd_ocr_activity/: __main__.py  const.py  main.py  ocr_activity.py  utils.py
