[tool.poetry]
name = "sd-ocr-activity"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"


[tool.poetry.scripts]
sd-pixel-engine = "sd_ocr_actvity:main"

[tool.poetry.dependencies]
python = "^3.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
